# EzSQL.py

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PyQueryX.py  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/: basic_usage.py
ezsql/: __init__.py  connection.py  exceptions.py  helpers.py
pyqueryx/: __init__.py  config.py  connection.py  exceptions.py  helpers.py
tests/: __init__.py  test_ezsql.py
