[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ezsql"
version = "0.1.0"
description = "A small, beginner-friendly SQL wrapper for Python DB-API drivers."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "EZSQL contributors" }
]
keywords = ["sql", "sqlite", "postgres", "database", "db-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2>=2.9"]

[project.urls]
Homepage = "https://github.com/ezsql/ezsql"
Issues = "https://github.com/ezsql/ezsql/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ezsql*"]

[tool.setuptools.package-data]
ezsql = ["py.typed"]
